# asr-noise-pipeline

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
data/: raw.dvc
results/manifests/en/: clean.jsonl  clean_raw.jsonl  noisy_snr-5.jsonl  noisy_snr0.jsonl  noisy_snr10.jsonl  noisy_snr15.jsonl  noisy_snr20.jsonl  noisy_snr25.jsonl  noisy_snr30.jsonl  noisy_snr35.jsonl  noisy_snr40.jsonl  noisy_snr5.jsonl  preds_snr-5.jsonl  preds_snr0.jsonl  preds_snr10.jsonl  preds_snr15.jsonl  preds_snr20.jsonl  preds_snr25.jsonl  preds_snr30.jsonl  preds_snr35.jsonl  preds_snr40.jsonl  preds_snr5.jsonl  tmpmh0v37z8.tmp
results/manifests/it/: clean.jsonl  clean_raw.jsonl  noisy_snr-5.jsonl  noisy_snr0.jsonl  noisy_snr10.jsonl  noisy_snr15.jsonl  noisy_snr20.jsonl  noisy_snr25.jsonl  noisy_snr30.jsonl  noisy_snr35.jsonl  noisy_snr40.jsonl  noisy_snr5.jsonl  preds_snr-5.jsonl  preds_snr0.jsonl  preds_snr10.jsonl  preds_snr15.jsonl  preds_snr20.jsonl  preds_snr25.jsonl  preds_snr30.jsonl  preds_snr35.jsonl  preds_snr40.jsonl  preds_snr5.jsonl
results/manifests/pl/: clean.jsonl  clean_raw.jsonl  noisy_snr-5.jsonl  noisy_snr0.jsonl  noisy_snr10.jsonl  noisy_snr15.jsonl  noisy_snr20.jsonl  noisy_snr25.jsonl  noisy_snr30.jsonl  noisy_snr35.jsonl  noisy_snr40.jsonl  noisy_snr5.jsonl  preds_snr-5.jsonl  preds_snr0.jsonl  preds_snr10.jsonl  preds_snr15.jsonl  preds_snr20.jsonl  preds_snr25.jsonl  preds_snr30.jsonl  preds_snr35.jsonl  preds_snr40.jsonl  (+1 more)
src/: add_noise.py  add_phonemes.py  evaluate.py  make_manifest.py  make_noisy.py  plot.py  predict.py
(+66 files in other folders)
