[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asr-noise-pipeline"
version = "0.1.0"
description = "Effect of additive Gaussian noise on wav2vec2 phoneme recognition across four languages"
requires-python = ">=3.10"
dependencies = [
    "dvc>=3",
    "numpy>=1.24",
    "soundfile>=0.12",   # requires system libsndfile with FLAC support
    "pyyaml>=6",
    "torch>=2.0",
    "transformers>=4.30", # Wav2Vec2ForCTC stable since 4.x; keep in sync with torch
    "matplotlib>=3.7",
    "phonemizer>=3.0",
]

[project.optional-dependencies]
resample = [
    "librosa>=0.10",     # only needed when input audio is not already 16 kHz
]

# Non-pip prerequisites (document here, install manually):
#   - Python >= 3.10
#   - espeak-ng       (system binary used by src/add_phonemes.py)

[tool.hatch.build.targets.wheel]
packages = ["src"]